src/main/jkube/helidon-books-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /helidon-books(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: helidon-books
                port:
                  number: 8080
  ingressClassName: nginx
